fix bug #72998

the function fn_complete in libedit null checks matches[2]